2013-04-08  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c, common-src/amutil.c,
	  common-src/amutil.h, device-src/xfer-dest-taper-cacher.c,
	  device-src/xfer-dest-taper-splitter.c,
	  device-src/xfer-source-recovery.c, recover-src/extract_list.c,
	  server-src/dumper.c, server-src/xfer-dest-holding.c,
	  server-src/xfer-source-holding.c, xfer-src/dest-null.c,
	  xfer-src/element-glue.c,
	  xfer-src/filter-crc.c: Rename crc32 to crc32_add.

2013-04-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/glib-util.c: Use g_list_alloc.

2013-04-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amflush.c, server-src/cmdfile.c,
	  server-src/planner.c: Do not use g_ptr_array_new_full.

2013-03-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add set-no-reuse in the storage.
	* common-src/conffile.h: Add STORAGE_SET_NO_REUSE and
	  storage_get_set_no_reuse.
	* perl/Amanda/Config.swg: Add STORAGE_SET_NO_REUSE.
	* perl/Amanda/Storage.pm: Set $self->{'set_no_reuse'}.
	* perl/Amanda/Taper/Scribe.pm: Mark the tape as no-reuse and call the
	  changer no_reuse method if set-no-reuse is set in the storage.

2013-03-28  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Print the curl version to the debug file.
	* common-src/conffile.c, server-src/amcheck.c,
	  server-src/cmdfile.c, server-src/diskfile.c,
	  server-src/driver.c: Fix bug found by coverity.

2013-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* Many files: Add eject-volume, device-output-buffer-size,
	  autoflush, flush-threshold-dumped, flush-threshold-scheduled,
	  taperflush, report-use-media, report-next-media and interactivity to
	  the storage section.
	* perl/Amanda/Taper/Worker.pm: Add the storage name to the START
	  log line.

2013-03-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/cmdfile.c, server-src/cmdfile.h: Add files.

2013-03-25  Jean-Louis Martineau <martineau@zmanda.com>